[gd_scene load_steps=4 format=3 uid="uid://ccigjuln5qq4b"]

[ext_resource type="Script" path="res://godot4/elements/goals/PentaGoal.gd" id="1_efvqh"]
[ext_resource type="Script" path="res://addons/vshapes/VRegularPolygon.gd" id="2_d2f78"]
[ext_resource type="PackedScene" uid="uid://b3jyuprf7rhpo" path="res://godot4/effects/IsoPolygon.tscn" id="2_k6hee"]

[node name="PentaGoal" type="Area2D"]
script = ExtResource("1_efvqh")

[node name="VRegularPolygon" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_d2f78")
sides = 5

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
unique_name_in_owner = true
polygon = PackedVector2Array(30.9017, 95.1057, -80.9017, 58.7785, -80.9017, -58.7785, 30.9017, -95.1057, 100, -2.44921e-14)

[node name="IsoPolygon" parent="." instance=ExtResource("2_k6hee")]
unique_name_in_owner = true
height = 64.0
stroke_width = 10.0
stroke = Color(0.916667, 0, 1, 1)
fill = Color(0.51, 0, 0.85, 0.392157)
underline_alpha = 0.1

[node name="Rings" type="Node2D" parent="."]
unique_name_in_owner = true
modulate = Color(0.85, 0, 1, 1)
position = Vector2(0, -64)
